[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "stealthmole-mcp"
version = "0.1.0"
description = "StealthMole API MCP Server - Access threat intelligence from Deep & Dark Web"
authors = [
    {name = "jin", email = "jin@stealthmole.com"}
]

requires-python = ">=3.10"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
]

[project.scripts]
dev = "smithery.cli.dev:main" # Run the MCP server in development mode
start = "smithery.cli.start:main" # Run the MCP server in production mode
playground = "smithery.cli.playground:main" # Run server with interactive testing playground

[tool.smithery]
server = "stealthmole_mcp.server:create_server" # Function that returns a patched FastMCP server
log_level = "warning" # Production log level (optional, defaults to "warning")